// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar default 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="p-progressbar p-component p-progressbar-determinate"
    data-pc-name="progressbar"
    data-pc-section="root"
    role="progressbar"
  >
    <div
      class="p-progressbar-value p-progressbar-value-animate"
      data-pc-section="value"
      style="display: flex;"
    />
  </div>
</div>
`;

exports[`ProgressBar hide value 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="p-progressbar p-component p-progressbar-determinate"
    data-pc-name="progressbar"
    data-pc-section="root"
    role="progressbar"
  >
    <div
      class="p-progressbar-value p-progressbar-value-animate"
      data-pc-section="value"
      style="width: 50%; display: flex;"
    />
  </div>
</div>
`;

exports[`ProgressBar mode determinate 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    class="p-progressbar p-component p-progressbar-determinate"
    data-pc-name="progressbar"
    data-pc-section="root"
    role="progressbar"
  >
    <div
      class="p-progressbar-value p-progressbar-value-animate"
      data-pc-section="value"
      style="width: 20%; display: flex;"
    >
      <div
        class="p-progressbar-label"
        data-pc-section="label"
      >
        20%
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBar mode indeterminate 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="p-progressbar p-component p-progressbar-indeterminate"
    data-pc-name="progressbar"
    data-pc-section="root"
    role="progressbar"
    style="height: 6px;"
  >
    <div
      class="p-progressbar-indeterminate-container"
      data-pc-section="container"
    >
      <div
        class="p-progressbar-value p-progressbar-value-animate"
        data-pc-section="value"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar value 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="p-progressbar p-component p-progressbar-determinate"
    data-pc-name="progressbar"
    data-pc-section="root"
    role="progressbar"
  >
    <div
      class="p-progressbar-value p-progressbar-value-animate"
      data-pc-section="value"
      style="width: 50%; display: flex;"
    >
      <div
        class="p-progressbar-label"
        data-pc-section="label"
      >
        50%
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBar value with unit 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="p-progressbar p-component p-progressbar-determinate"
    data-pc-name="progressbar"
    data-pc-section="root"
    role="progressbar"
  >
    <div
      class="p-progressbar-value p-progressbar-value-animate"
      data-pc-section="value"
      style="width: 50%; display: flex;"
    >
      <div
        class="p-progressbar-label"
        data-pc-section="label"
      >
        50%
      </div>
    </div>
  </div>
</div>
`;
